# qopenjglwidgettest

./: CMakeLists.txt  README.md
include/: glwidget.h  helper.h  widget.h  window.h
src/: glwidget.cpp  helper.cpp  widget.cpp  window.cpp
